--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
     "mysql": "^2.17.1",
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.0",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "nodemon server.js"
